fix(guides): constrain hero image to max height of 400px on mobile, desktop

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -26,13 +26,15 @@ span.visually-hidden {
 
 /* GENERIC / SHARED */
 .hero-img {
+  max-height: 400px;
+  display: block;
+  margin: auto;
   width: 100%;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 576px) {
   .hero-img {
-    /* to avoid jitter during load */
-    height: 533px;
+    width: initial;
   }
 }
 
